test/1.2/errors/T_EASZR.dml
/*
  © 2021-2023 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.2;
device test;
data int x;
bank b {
    parameter register_size = 4;
    /// ERROR EASZR
    register r[i in 0..-1];
}
